Example with binary files

--- a/Core/Debug/makefile
+++ b/Core/Debug/makefile
@@ -63,8 +63,8 @@ all: main-build
 main-build: Core.elf secondary-outputs
 
 # Tool invocations
-Core.elf Core.map: $(OBJS) $(USER_OBJS) C:\Users\david\Documents\ST\Core\STM32L476RGTX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-gcc -o "Core.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"C:\Users\david\Documents\ST\Core\STM32L476RGTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="Core.map" -Wl,--cref -Wl,--gc-sections -static -Wl,--just-symbols ../app.sym --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
+Core.elf Core.map: $(OBJS) $(USER_OBJS) C:\Users\david\Documents\GitHub\Partial-Reconfig-C\Core\STM32L476RGTX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-gcc -o "Core.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"C:\Users\david\Documents\GitHub\Partial-Reconfig-C\Core\STM32L476RGTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="Core.map" -Wl,--cref -Wl,--gc-sections -static -Wl,--just-symbols ../app.sym --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
